# python_regex_engine

./: README.md  main.py  pyproject.toml
python_regex_engine/: __main__.py  automata.py  monoids.py  parser.py
src/: parser.py
